Fix styles on ios

--- a/minecraft/book/style.css
+++ b/minecraft/book/style.css
@@ -44,6 +44,9 @@ main {
 	padding: 0.75em;
 	font-size: 0.95em;
 	width: 100%;
+	border: solid #777 1px;
+	border-radius: 0px; /* FUCKING IOS ADDS A BORDER RADIUS */
+	background-clip: padding-box;
 }
 .inputLine > label {
 	font-size: 0.9em;
